@@ -58,6 +58,7 @@ void avcodec_register_all(void)
     REGISTER_ENCDEC (ASV1, asv1);
     REGISTER_ENCDEC (ASV2, asv2);
     REGISTER_DECODER(AVS, avs);
+    REGISTER_DECODER(BETHSOFTVID, bethsoftvid);
     REGISTER_ENCDEC (BMP, bmp);
     REGISTER_DECODER(C93, c93);
     REGISTER_DECODER(CAVS, cavs);
